[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subito-it-fetcher_aleganza"
version = "1.0.0"
authors = [
  { name="aleganza", email="ganzarolli.alessio@gmail.com" },
]
description = "Subito.it searcher"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/aleganza/subito-it-fetcher"
"Bug Tracker" = "https://github.com/aleganza/subito-it-fetcher/issues"